Fixed div Cutoff and Updated Readme

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,7 +22,7 @@ body {
     width: 100%;
     scrollbar-color: rgb(71, 71, 71) #585560;
 
-    height: 650px;
+    height: 800px;
     overflow: hidden;
     overflow-y: auto;
 }
